# sly-fox-tunes

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
bot/: __init__.py
bot/handlers/: __init__.py  download.py  start.py
bot/keyboards/: __init__.py  inline.py
bot/states/: __init__.py  download.py
config/: settings.py
docs/: 01-CONCEPT.md  02-TECH-STACK.md  03-ARCHITECTURE.md  04-BUSINESS-PROCESSES.md  05-DATABASE-SCHEMA.md  06-DEVELOPMENT-PLAN.md  07-API-REFERENCE.md  COOKIES-UPDATE.md  NO-COOKIES-BYPASS.md  QUICK-FIX-COOKIES.md  README.md  VPS-COOKIES-SETUP.md  VPS-NO-COOKIES-DEPLOY.md
scripts/: fix_cookies.sh  setup_cookies_vps.sh  test_cookies.py  test_no_cookies.py  test_ytdlp_config.py  upload_cookies.sh  upload_cookies_to_vps.sh
services/: __init__.py  downloader.py  downloader.py.backup  file_manager.py  validators.py
